# checklist

./: .checklist.yml  .travis.yml  Cargo.toml  README.md
.github/: dependabot.yml
ci/: before_deploy.sh  script.sh
src/: lib.rs  main.rs
tests/: rexpect_integration_tests.rs  simple_integration_tests.rs
