[package]
name = "checklist"
description = "A program to run through a checklist of manual and automated processes."
repository = "https://github.com/wickedchicken/checklist"
readme = "README.md"
license = "Apache-2.0"
version = "0.2.3"
authors = ["Mike Stipicevic <stipredirect@gmail.com>"]
edition = "2018"

[badges]
travis-ci = { repository = "wickedchicken/checklist" }

[dependencies]
console = "0.9.1"
dialoguer = "0.4.0"
duct_sh = "0.1.0"
failure = "0.1.6"
indicatif = "0.12.0"
maplit = "1.0.2"
scopeguard = "1.0.0"
serde = "1.0.104"
serde_derive = "1.0.102"
serde_yaml = "0.8.11"
structopt = "0.3.3"

[dev-dependencies]
assert_cmd = "0.11.1"
assert_fs = "0.11.0"
lazy_static = "1.4.0"
rexpect = "0.3.0"
