[package]
name = "checklist"
description = "A program to run through a checklist of manual and automated processes."
repository = "https://github.com/wickedchicken/checklist"
readme = "README.md"
license = "Apache-2.0"
version = "0.2.4"
authors = ["Mike Stipicevic <stipredirect@gmail.com>"]
edition = "2018"

[badges]
travis-ci = { repository = "wickedchicken/checklist" }

[dependencies]
console = "0.10.0"
dialoguer = "0.5.0"
duct_sh = "0.1.0"
failure = "0.1.7"
indicatif = "0.14.0"
maplit = "1.0.2"
scopeguard = "1.1.0"
serde = "1.0.105"
serde_derive = "1.0.102"
serde_yaml = "0.8.11"
structopt = "0.3.12"

[dev-dependencies]
assert_cmd = "0.12.0"
assert_fs = "0.13.1"
lazy_static = "1.4.0"
rexpect = "0.3.0"
