[package]
name = "checklist"
description = "A program to run through a checklist of manual and automated processes."
repository = "https://github.com/wickedchicken/checklist"
readme = "README.md"
license = "Apache-2.0"
version = "0.3.0"
authors = ["Mike Stipicevic <stipredirect@gmail.com>"]
edition = "2018"

[badges]
travis-ci = { repository = "wickedchicken/checklist" }

[dependencies]
console = "0.11.2"
dialoguer = "0.6.2"
duct_sh = "0.13.5"
failure = "0.1.8"
indicatif = "0.15.0"
maplit = "1.0.2"
scopeguard = "1.1.0"
serde = "1.0.114"
serde_derive = "1.0.102"
serde_yaml = "0.8.13"
structopt = "0.3.15"

[dev-dependencies]
assert_cmd = "1.0.1"
assert_fs = "1.0.0"
lazy_static = "1.4.0"
rexpect = "0.4.0"
